[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/NinePatch 2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Main Menu.png" type="Texture" id=2]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Jajan Simulator Title 2.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/NinePatch 2.png-9001a897021d635897afce894cdd701b.stex"

[sub_resource type="DynamicFont" id=3]
size = 52
font_data = ExtResource( 4 )

[node name="MainMenu" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="MainMenu" type="Sprite" parent="Panel"]
position = Vector2( 640, 360 )
scale = Vector2( 0.666667, 0.666667 )
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -37.0
margin_right = 304.0
margin_bottom = 343.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 398.0
margin_bottom = 380.0
custom_constants/separation = 20
alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/VBoxContainer"]
margin_right = 398.0
margin_bottom = 180.0
texture = ExtResource( 1 )
patch_margin_left = 60
patch_margin_top = 60
patch_margin_right = 60
patch_margin_bottom = 120

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -137.636
margin_top = -95.0
margin_right = 150.364
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "Play"

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/NinePatchRect"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 397.0
margin_bottom = 181.0

[node name="NinePatchRect2" type="NinePatchRect" parent="MarginContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 398.0
margin_bottom = 380.0
texture = ExtResource( 1 )
patch_margin_left = 60
patch_margin_top = 60
patch_margin_right = 60
patch_margin_bottom = 120

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/NinePatchRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.636
margin_top = -96.0
margin_right = 164.364
margin_bottom = 54.0
custom_fonts/font = SubResource( 1 )
text = "sHOP"

[node name="ShopButton" type="Button" parent="MarginContainer/VBoxContainer/NinePatchRect2"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 397.0
margin_bottom = 181.0

[node name="NinePatchRect3" type="NinePatchRect" parent="."]
margin_left = 562.0
margin_top = 525.0
margin_right = 1120.0
margin_bottom = 705.0
rect_scale = Vector2( 0.3, 0.3 )
texture = SubResource( 2 )
patch_margin_left = 60
patch_margin_top = 60
patch_margin_right = 60
patch_margin_bottom = 120

[node name="Label" type="Label" parent="NinePatchRect3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.0
margin_top = -53.0
margin_right = 212.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 3 )
text = "How to play?"
align = 1

[node name="HowToPlayButton" type="Button" parent="NinePatchRect3"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 398.0
margin_bottom = 20.0

[node name="NinePatchRect4" type="NinePatchRect" parent="."]
margin_left = 585.0
margin_top = 599.0
margin_right = 983.0
margin_bottom = 779.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )
patch_margin_left = 60
patch_margin_top = 60
patch_margin_right = 60
patch_margin_bottom = 120

[node name="Label" type="Label" parent="NinePatchRect4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.636
margin_top = -92.0
margin_right = 156.364
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "qUIT"

[node name="QuitButton" type="Button" parent="NinePatchRect4"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 14.0
margin_top = -2.0
margin_right = 411.0
margin_bottom = 179.0

[node name="JajanSimulatorTitle" type="Sprite" parent="."]
position = Vector2( 572, 163 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/NinePatchRect/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NinePatchRect2/ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="pressed" from="NinePatchRect3/HowToPlayButton" to="." method="_on_HowToPlayButton_pressed"]
[connection signal="pressed" from="NinePatchRect4/QuitButton" to="." method="_on_QuitButton_pressed"]
